RESOLVED FIXED258202
REGRESSION(263967@main): [GTK][WPE] WTR: not possible to run WebKitTestRunner from any directory
https://bugs.webkit.org/show_bug.cgi?id=258202
Summary REGRESSION(263967@main): [GTK][WPE] WTR: not possible to run WebKitTestRunner...
Carlos Garcia Campos
Reported 2023-06-16 06:16:39 PDT
Since 263967@main the fonts path is resolved using current working directory, so it only works when called from top dir.
Attachments
Carlos Garcia Campos
Comment 1 2023-06-16 06:18:27 PDT
EWS
Comment 2 2023-06-19 00:24:53 PDT
Committed 265294@main (35ced2711f1a): <https://commits.webkit.org/265294@main> Reviewed commits have been landed. Closing PR #15047 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2023-06-19 00:25:17 PDT
Note You need to log in before you can comment on or make changes to this bug.