REGRESSION(263967@main): [GTK][WPE] WTR: not possible to run WebKitTestRunner from any directory https://bugs.webkit.org/show_bug.cgi?id=258202

Reviewed by Michael Catanzaro.

Since 263967@main the fonts path is resolved using current working
directory, so it only works when called from top dir. We can simply use
TOP_LEVEL_DIR to build the fonts path.

* Tools/WebKitTestRunner/InjectedBundle/gtk/ActivateFontsGtk.cpp:
(WTR::activateFonts):
* Tools/WebKitTestRunner/InjectedBundle/wpe/ActivateFontsWPE.cpp:
(WTR::activateFonts):

Canonical link: https://commits.webkit.org/265294@main